<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".presentation.auth.SignInFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tv_email_holder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/inter_semibold"
            android:text="Email"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tl_email"
            style="@style/TextInputLayoutStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="5dp"
            android:textColorHint="@color/text_gray"
            android:theme="@style/TextInputLayoutStyle"
            app:boxBackgroundColor="@color/pale_orange20"
            app:layout_constraintTop_toBottomOf="@id/tv_email_holder">

            <EditText
                android:id="@+id/et_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/inter_semibold"
                android:hint="@string/masukkan_email"
                android:inputType="textEmailAddress" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/tv_password_holder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/inter_semibold"
            android:text="Password"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tl_email" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tl_password"
            style="@style/TextInputLayoutStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="5dp"
            android:textColorHint="@color/text_gray"
            android:theme="@style/TextInputLayoutStyle"
            app:boxBackgroundColor="@color/pale_orange20"
            app:layout_constraintTop_toBottomOf="@id/tv_password_holder"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/orange">

            <EditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/inter_semibold"
                android:hint="@string/masukkan_password"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/tv_lupa_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/inter_medium"
            android:text="@string/lupa_password"
            android:textColor="@color/orange"
            app:layout_constraintTop_toBottomOf="@id/tl_password"
            app:layout_constraintEnd_toEndOf="@id/tl_password"
            android:layout_marginTop="10dp"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_sign_in"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            app:cornerRadius="10dp"
            android:layout_marginTop="40dp"
            android:text="@string/masuk"
            android:fontFamily="@font/inter_semibold"
            app:layout_constraintTop_toBottomOf="@id/tv_lupa_password"/>

        <TextView
            android:id="@+id/tv_atau_masuk_dengan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="50dp"
            android:fontFamily="@font/inter_semibold"
            android:text="@string/atau_masuk_dengan"
            android:textColor="@color/black30"
            app:layout_constraintTop_toBottomOf="@id/btn_sign_in"/>

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:background="@color/black30"
            android:layout_marginHorizontal="20dp"
            app:layout_constraintTop_toTopOf="@id/tv_atau_masuk_dengan"
            app:layout_constraintBottom_toBottomOf="@id/tv_atau_masuk_dengan"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/tv_atau_masuk_dengan" />

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:background="@color/black30"
            android:layout_marginHorizontal="20dp"
            app:layout_constraintTop_toTopOf="@id/tv_atau_masuk_dengan"
            app:layout_constraintBottom_toBottomOf="@id/tv_atau_masuk_dengan"
            app:layout_constraintStart_toEndOf="@id/tv_atau_masuk_dengan"
            app:layout_constraintEnd_toEndOf="parent"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_twitter"
            android:layout_width="60dp"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@id/tv_atau_masuk_dengan"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            style="@style/Widget.MaterialComponents.TimePicker.ImageButton"
            app:backgroundTint="@color/white"
            app:strokeWidth="1dp"
            app:iconSize="20dp"
            app:iconTint="@android:color/holo_blue_light"
            app:icon="@drawable/ic_twitter"
            app:strokeColor="@color/pale_orange"
            app:cornerRadius="10dp"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_google"
            android:layout_width="60dp"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            app:layout_constraintTop_toBottomOf="@id/tv_atau_masuk_dengan"
            app:layout_constraintEnd_toStartOf="@id/btn_twitter"
            style="@style/Widget.MaterialComponents.TimePicker.ImageButton"
            app:backgroundTint="@color/white"
            app:strokeWidth="1dp"
            app:iconSize="20dp"
            app:iconTint="@null"
            app:icon="@drawable/ic_google"
            app:strokeColor="@color/pale_orange"
            app:cornerRadius="10dp"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_facebook"
            android:layout_width="60dp"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"
            app:layout_constraintTop_toBottomOf="@id/tv_atau_masuk_dengan"
            app:layout_constraintStart_toEndOf="@id/btn_twitter"
            style="@style/Widget.MaterialComponents.TimePicker.ImageButton"
            app:backgroundTint="@color/white"
            app:strokeWidth="1dp"
            app:iconTint="@null"
            app:strokeColor="@color/pale_orange"
            app:cornerRadius="10dp"/>

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/ic_facebook"
            app:layout_constraintBottom_toBottomOf="@+id/btn_facebook"
            app:layout_constraintEnd_toEndOf="@+id/btn_facebook"
            app:layout_constraintStart_toStartOf="@+id/btn_facebook"
            app:layout_constraintTop_toTopOf="@+id/btn_facebook" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>